<resources>
    <string name="app_name">Card Activation</string>
    <string name="application_id">Application ID</string>
    <string name="get_application">Get Application</string>
    <string name="application_information">Application Information</string>
    <string name="kha">KHA</string>
    <string name="applicationType">SL</string>
    <string name="serial_number">Serial Number</string>
    <string name="rfid_number">RFID Number</string>
    <string name="activate_card">Activate</string>
    <string name="secure_card">Secure</string>
    <string name="renew_card">Renew</string>
    <string name="tap_your_card">Please tap your card</string>
    <string name="card_uid">Card UID:</string>
    <string name="done">Done</string>
    <string name="rfid_field_empty_message">Card UID Empty</string>
    <string name="verify">Verify</string>
    <string name="verifyMessage">Verified Successfully</string>
    <string name="write_on_card">Write On Card</string>
    <string name="name">Name</string>
    <string name="Phone">Phone</string>
    <string name="nid">NID</string>
    <string name="tracking">Tracking</string>
    <string name="card_number">Card Number</string>
    <string name="father_name">Father\' Name</string>
</resources>
