<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number|textPersonName"
            android:ems="10"
            android:id="@+id/editTextApplicationID"
            android:hint="@string/application_id"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="24sp"
            style="@android:style/Widget.Holo.Light.AutoCompleteTextView" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:autofillHints="" tools:targetApi="o"/>
    <Button
            android:text="@string/get_application"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGetApplication"
            app:layout_constraintTop_toBottomOf="@+id/editTextApplicationID" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="30sp"/>
    <TextView
            android:text="@string/application_information"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textViewApplicationInformation"
            android:textSize="18sp" android:textAlignment="viewStart"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGetApplication"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/editTextSerialNumber"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewApplicationType"
            android:textSize="24sp" android:textAlignment="viewStart"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewRFIDNumber"
            app:layout_constraintEnd_toStartOf="@+id/editTextSerialNumber" tools:text="@string/applicationType"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number|textPersonName"
            android:ems="10"
            android:id="@+id/editTextSerialNumber"
            android:hint="@string/serial_number"
            android:textSize="24sp"
            style="@android:style/Widget.DeviceDefault.EditText" android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewRFIDNumber"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toEndOf="@+id/textViewApplicationType"
            android:layout_marginStart="16dp" android:autofillHints="" tools:targetApi="o"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRFIDNumber"
            android:textSize="24sp" android:textAlignment="viewStart"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonActivateCard" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/rfid_number"/>
    <Button
            android:text="@string/activate_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonActivateCard"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textStyle="bold"
            android:textSize="30sp"/>
</android.support.constraint.ConstraintLayout>